syntax = "proto3";

package filecenter;

// 文件结构体
message File {
    int64 id = 1;
    string fileName = 2;
    string fileLocation = 3;
    string secret = 4;
    string createTime = 5;
}

service SupporterFileCenter {
    rpc InsertFile (InsertFileReq) returns (InsertFileResp) {
    }
    rpc FindFileById (FindFileByIdReq) returns (FindFileByIdResp) {
    }
    rpc FindFileByTaskAndSecret (FindFileByTaskAndSecretReq) returns (FindFileByTaskAndSecretResp) {
    }
}

// 存入文件
message InsertFileReq {
    File file = 1;
}

message InsertFileResp {
    int64 id = 1;
}

// 根据 id 获取文件
message FindFileByIdReq {
    int64 id = 1;
}

message FindFileByIdResp {
    File file = 1;
}

// 根据任务 id 和权限 id 获取文件
message FindFileByTaskAndSecretReq {
    int64 task = 1;
    string secret = 2;
}

message FindFileByTaskAndSecretResp {
    repeated File files = 1;
}

